@@ -101,8 +101,8 @@ class OrderTest {
             OrderBag.builder().id(2L).build(),
             OrderBag.builder().id(3L).build()));
         order.updateWithNewOrderBags(bags);
-        order.removeOrderBag(bags.get(0));
-        bags.remove(bags.get(0));
+        order.removeOrderBag(bags.getFirst());
+        bags.remove(bags.getFirst());
 
         assertSame(previous, order.getOrderBags());
         assertNotSame(bags, order.getOrderBags());
