@@ -145,7 +145,7 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
             .filter(employee -> employee.getId().equals(emplView.getEmployeeId()))
             .flatMap(employee -> employee.getEmployeePosition().stream()
                 .map(position -> modelMapper.map(position, PositionDto.class)))
-            .collect(Collectors.toList());
+            .toList();
 
         getEmployeeDto.getEmployeePositions().addAll(positionsDtos);
     }
@@ -156,7 +156,7 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
             .filter(employee -> employee.getId().equals(emplView.getEmployeeId()))
             .flatMap(employee -> employee.getTariffInfos().stream()
                 .map(tariffsInfo -> modelMapper.map(tariffsInfo, GetTariffInfoForEmployeeDto.class)))
-            .collect(Collectors.toList());
+            .toList();
 
         getEmployeeDto.getTariffs().addAll(tariffsInfoDtos);
     }
