@@ -415,7 +415,7 @@ class UBSClientServiceImplTest {
         when(tariffLocationRepository.findTariffLocationByTariffsInfoAndLocation(tariffsInfo, location))
             .thenReturn(Optional.of(tariffLocation));
         when(bagRepository.findAllActiveBagsByTariffsInfoId(tariffsInfoId)).thenReturn(bags);
-        when(modelMapper.map(bags.get(0), BagTranslationDto.class)).thenReturn(bagTranslationDto);
+        when(modelMapper.map(bags.getFirst(), BagTranslationDto.class)).thenReturn(bagTranslationDto);
 
         var userPointsAndAllBagsDtoActual =
             ubsService.getFirstPageDataByTariffAndLocationId(uuid, tariffsInfoId, locationId);
@@ -424,8 +424,8 @@ class UBSClientServiceImplTest {
             userPointsAndAllBagsDtoExpected.getBags(),
             userPointsAndAllBagsDtoActual.getBags());
         assertEquals(
-            userPointsAndAllBagsDtoExpected.getBags().get(0).getId(),
-            userPointsAndAllBagsDtoActual.getBags().get(0).getId());
+            userPointsAndAllBagsDtoExpected.getBags().getFirst().getId(),
+            userPointsAndAllBagsDtoActual.getBags().getFirst().getId());
         assertEquals(
             userPointsAndAllBagsDtoExpected.getPoints(),
             userPointsAndAllBagsDtoActual.getPoints());
@@ -435,7 +435,7 @@ class UBSClientServiceImplTest {
         verify(locationRepository).findById(locationId);
         verify(tariffLocationRepository).findTariffLocationByTariffsInfoAndLocation(tariffsInfo, location);
         verify(bagRepository).findAllActiveBagsByTariffsInfoId(tariffsInfoId);
-        verify(modelMapper).map(bags.get(0), BagTranslationDto.class);
+        verify(modelMapper).map(bags.getFirst(), BagTranslationDto.class);
     }
 
     @Test
@@ -681,7 +681,7 @@ class UBSClientServiceImplTest {
         when(tariffLocationRepository.findTariffLocationByTariffsInfoAndLocation(tariffsInfo, location))
             .thenReturn(Optional.of(tariffLocation));
         when(bagRepository.findAllActiveBagsByTariffsInfoId(tariffsInfoId)).thenReturn(bags);
-        when(modelMapper.map(bags.get(0), BagTranslationDto.class)).thenReturn(bagTranslationDto);
+        when(modelMapper.map(bags.getFirst(), BagTranslationDto.class)).thenReturn(bagTranslationDto);
 
         var userPointsAndAllBagsDtoActual =
             ubsService.getFirstPageDataByOrderId(uuid, orderId);
@@ -690,8 +690,8 @@ class UBSClientServiceImplTest {
             userPointsAndAllBagsDtoExpected.getBags(),
             userPointsAndAllBagsDtoActual.getBags());
         assertEquals(
-            userPointsAndAllBagsDtoExpected.getBags().get(0).getId(),
-            userPointsAndAllBagsDtoActual.getBags().get(0).getId());
+            userPointsAndAllBagsDtoExpected.getBags().getFirst().getId(),
+            userPointsAndAllBagsDtoActual.getBags().getFirst().getId());
         assertEquals(
             userPointsAndAllBagsDtoExpected.getPoints(),
             userPointsAndAllBagsDtoActual.getPoints());
@@ -700,7 +700,7 @@ class UBSClientServiceImplTest {
         verify(orderRepository).findById(orderId);
         verify(tariffLocationRepository).findTariffLocationByTariffsInfoAndLocation(tariffsInfo, location);
         verify(bagRepository).findAllActiveBagsByTariffsInfoId(tariffsInfoId);
-        verify(modelMapper).map(bags.get(0), BagTranslationDto.class);
+        verify(modelMapper).map(bags.getFirst(), BagTranslationDto.class);
     }
 
     @Test
@@ -786,8 +786,8 @@ class UBSClientServiceImplTest {
                 f.set(ubsService, "1");
             }
         }
-        tariffsInfo.setBags(Arrays.asList(bag));
-        order.updateWithNewOrderBags(Arrays.asList(ModelUtils.getOrderBag()));
+        tariffsInfo.setBags(Collections.singletonList(bag));
+        order.updateWithNewOrderBags(Collections.singletonList(ModelUtils.getOrderBag()));
         when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user);
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(tariffsInfo));
@@ -810,7 +810,7 @@ class UBSClientServiceImplTest {
         user.setCurrentPoints(900);
 
         OrderResponseDto dto = getOrderResponseDto();
-        dto.getBags().get(0).setAmount(15);
+        dto.getBags().getFirst().setAmount(15);
         dto.setAddressId(1L);
         dto.setLocationId(1L);
         Order order = getOrder();
@@ -839,8 +839,8 @@ class UBSClientServiceImplTest {
                 f.set(ubsService, "1");
             }
         }
-        tariffsInfo.setBags(Arrays.asList(bag));
-        order.updateWithNewOrderBags(Arrays.asList(ModelUtils.getOrderBag()));
+        tariffsInfo.setBags(Collections.singletonList(bag));
+        order.updateWithNewOrderBags(Collections.singletonList(ModelUtils.getOrderBag()));
         when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user.setId(null), user);
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(tariffsInfo));
@@ -863,7 +863,7 @@ class UBSClientServiceImplTest {
         user.setCurrentPoints(900);
 
         OrderResponseDto dto = getOrderResponseDto();
-        dto.getBags().get(0).setAmount(15);
+        dto.getBags().getFirst().setAmount(15);
         dto.setAddressId(1L);
         dto.setLocationId(1L);
         Order order = getOrder();
@@ -892,8 +892,8 @@ class UBSClientServiceImplTest {
                 f.set(ubsService, "1");
             }
         }
-        tariffsInfo.setBags(Arrays.asList(bag));
-        order.updateWithNewOrderBags(Arrays.asList(ModelUtils.getOrderBag()));
+        tariffsInfo.setBags(Collections.singletonList(bag));
+        order.updateWithNewOrderBags(Collections.singletonList(ModelUtils.getOrderBag()));
         when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user.setId(null), user);
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(tariffsInfo));
@@ -916,7 +916,7 @@ class UBSClientServiceImplTest {
         user.setCurrentPoints(900);
 
         OrderResponseDto dto = getOrderResponseDto();
-        dto.getBags().get(0).setAmount(15);
+        dto.getBags().getFirst().setAmount(15);
         dto.setBags(List.of(BagDto.builder().id(1).amount(1).build(), BagDto.builder().id(3).amount(15).build()));
 
         Order order = getOrder();
@@ -979,7 +979,7 @@ class UBSClientServiceImplTest {
         user.setCurrentPoints(900);
 
         OrderResponseDto dto = getOrderResponseDto();
-        dto.getBags().get(0).setAmount(15);
+        dto.getBags().getFirst().setAmount(15);
         dto.setCertificates(Set.of("4444-4444"));
         Order order = getOrder();
         user.setOrders(new ArrayList<>());
@@ -988,7 +988,7 @@ class UBSClientServiceImplTest {
 
         Bag bag = getBagForOrder();
         TariffsInfo tariffsInfo = getTariffInfo();
-        tariffsInfo.setBags(Arrays.asList(bag));
+        tariffsInfo.setBags(Collections.singletonList(bag));
 
         UBSuser ubSuser = getUBSuser();
 
@@ -1032,7 +1032,7 @@ class UBSClientServiceImplTest {
         user.setCurrentPoints(900);
 
         OrderResponseDto dto = getOrderResponseDto();
-        dto.getBags().get(0).setAmount(15);
+        dto.getBags().getFirst().setAmount(15);
         dto.setCertificates(Set.of("4444-4444"));
         Order order = getOrder();
         user.setOrders(new ArrayList<>());
@@ -1041,7 +1041,7 @@ class UBSClientServiceImplTest {
 
         Bag bag = getBagForOrder();
         TariffsInfo tariffsInfo = getTariffInfo();
-        tariffsInfo.setBags(Arrays.asList(bag));
+        tariffsInfo.setBags(Collections.singletonList(bag));
 
         Certificate certificate = getCertificate();
         certificate.setPoints(1000_00);
@@ -1086,7 +1086,7 @@ class UBSClientServiceImplTest {
         user.setCurrentPoints(5_000);
 
         OrderResponseDto dto = getOrderResponseDto();
-        dto.getBags().get(0).setAmount(2);
+        dto.getBags().getFirst().setAmount(2);
         dto.setPointsToUse(2_000);
         Order order = getOrder();
         user.setOrders(new ArrayList<>());
@@ -1095,7 +1095,7 @@ class UBSClientServiceImplTest {
 
         Bag bag = getBagForOrder();
         TariffsInfo tariffsInfo = getTariffInfo();
-        tariffsInfo.setBags(Arrays.asList(bag));
+        tariffsInfo.setBags(Collections.singletonList(bag));
 
         UBSuser ubSuser = getUBSuser();
 
@@ -1133,18 +1133,18 @@ class UBSClientServiceImplTest {
     }
 
     @Test
-    void testSaveToDbThrowBadRequestExceptionPriceLowerThanLimit() throws IllegalAccessException {
+    void testSaveToDbThrowBadRequestExceptionPriceLowerThanLimit() {
         User user = getUserWithLastLocation();
         user.setAlternateEmail("test@mail.com");
         user.setCurrentPoints(900);
 
         OrderResponseDto dto = getOrderResponseDto();
-        dto.getBags().get(0).setAmount(1);
+        dto.getBags().getFirst().setAmount(1);
         Bag bag = getBagForOrder();
         Order order = getOrder();
-        order.updateWithNewOrderBags(Arrays.asList(ModelUtils.getOrderBag()));
+        order.updateWithNewOrderBags(Collections.singletonList(ModelUtils.getOrderBag()));
         TariffsInfo tariffsInfo = getTariffInfo();
-        tariffsInfo.setBags(Arrays.asList(bag));
+        tariffsInfo.setBags(Collections.singletonList(bag));
         user.setOrders(new ArrayList<>());
         user.getOrders().add(order);
         user.setChangeOfPointsList(new ArrayList<>());
@@ -1164,7 +1164,7 @@ class UBSClientServiceImplTest {
     }
 
     @Test
-    void testSaveToDbThrowBadRequestExceptionPriceGreaterThanLimit() throws IllegalAccessException {
+    void testSaveToDbThrowBadRequestExceptionPriceGreaterThanLimit() {
         User user = getUserWithLastLocation();
         user.setAlternateEmail("test@mail.com");
         user.setCurrentPoints(900);
@@ -1192,13 +1192,13 @@ class UBSClientServiceImplTest {
     }
 
     @Test
-    void testSaveToDBWShouldThrowBadRequestException() throws IllegalAccessException {
+    void testSaveToDBWShouldThrowBadRequestException() {
         User user = getUserWithLastLocation();
         user.setAlternateEmail("test@mail.com");
         user.setCurrentPoints(900);
 
         OrderResponseDto dto = getOrderResponseDto();
-        dto.getBags().get(0).setAmount(15);
+        dto.getBags().getFirst().setAmount(15);
         Order order = getOrder();
         user.setOrders(new ArrayList<>());
         user.getOrders().add(order);
@@ -1220,7 +1220,7 @@ class UBSClientServiceImplTest {
         order1.getPayment().add(payment1);
 
         bag.setTariffsInfo(tariffsInfo);
-        tariffsInfo.setBags(Arrays.asList(bag));
+        tariffsInfo.setBags(List.of(bag));
         order.setTariffsInfo(tariffsInfo);
 
         when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user);
@@ -1243,13 +1243,11 @@ class UBSClientServiceImplTest {
         user.setCurrentPoints(900);
 
         OrderResponseDto dto = getOrderResponseDto();
-        dto.getBags().get(0).setAmount(15);
+        dto.getBags().getFirst().setAmount(15);
         Order order = getOrder();
         user.setOrders(new ArrayList<>());
         user.getOrders().add(order);
         user.setChangeOfPointsList(new ArrayList<>());
-
-        Bag bag = getBagForOrder();
 
         UBSuser ubSuser = getUBSuser();
 
@@ -1281,13 +1279,11 @@ class UBSClientServiceImplTest {
         user.setCurrentPoints(900);
 
         OrderResponseDto dto = getOrderResponseDto();
-        dto.getBags().get(0).setAmount(15);
+        dto.getBags().getFirst().setAmount(15);
         Order order = getOrder();
         user.setOrders(new ArrayList<>());
         user.getOrders().add(order);
         user.setChangeOfPointsList(new ArrayList<>());
-
-        Bag bag = getBagForOrder();
 
         UBSuser ubSuser = getUBSuser();
 
@@ -1324,13 +1320,13 @@ class UBSClientServiceImplTest {
     }
 
     @Test
-    void testSaveToDBWithoutOrderUnpaid() throws IllegalAccessException {
+    void testSaveToDBWithoutOrderUnpaid() {
         User user = getUserWithLastLocation();
         user.setAlternateEmail("test@mail.com");
         user.setCurrentPoints(900);
 
         OrderResponseDto dto = getOrderResponseDto(false);
-        dto.getBags().get(0).setAmount(15);
+        dto.getBags().getFirst().setAmount(15);
         Order order = getOrder();
         user.setOrders(new ArrayList<>());
         user.getOrders().add(order);
@@ -1350,7 +1346,7 @@ class UBSClientServiceImplTest {
         order1.getPayment().add(payment1);
         TariffsInfo tariffsInfo = getTariffsInfo();
         bag.setTariffsInfo(tariffsInfo);
-        tariffsInfo.setBags(Arrays.asList(bag));
+        tariffsInfo.setBags(List.of(bag));
         order.setTariffsInfo(tariffsInfo);
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(tariffsInfo));
@@ -1376,15 +1372,15 @@ class UBSClientServiceImplTest {
         User user = getUserWithLastLocation();
         user.setCurrentPoints(1000);
         OrderResponseDto dto = getOrderResponseDto();
-        dto.getBags().get(0).setAmount(5);
+        dto.getBags().getFirst().setAmount(5);
         Order order = getOrder();
         order.setOrderPaymentStatus(OrderPaymentStatus.PAID);
-        order.updateWithNewOrderBags(Arrays.asList(ModelUtils.getOrderBag()));
+        order.updateWithNewOrderBags(Collections.singletonList(ModelUtils.getOrderBag()));
 
         Bag bag = getBagForOrder();
         TariffsInfo tariffsInfo = getTariffInfo();
         bag.setTariffsInfo(tariffsInfo);
-        tariffsInfo.setBags(Arrays.asList(bag));
+        tariffsInfo.setBags(List.of(bag));
         order.setTariffsInfo(tariffsInfo);
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(tariffsInfo));
@@ -1404,7 +1400,7 @@ class UBSClientServiceImplTest {
         user.setCurrentPoints(900);
 
         OrderResponseDto dto = getOrderResponseDto();
-        dto.getBags().get(0).setAmount(3);
+        dto.getBags().getFirst().setAmount(3);
         Order order = getOrder();
         user.setOrders(new ArrayList<>());
         user.getOrders().add(order);
@@ -1451,7 +1447,7 @@ class UBSClientServiceImplTest {
             .setRecipientEmail("mail@mail.ua")
             .setRecipientPhone("067894522")
             .setAlternateEmail("my@email.com");
-        List<UBSuser> ubsUser = Arrays.asList(getUBSuser());
+        List<UBSuser> ubsUser = Collections.singletonList(getUBSuser());
         when(userRepository.findByUuid(uuid)).thenReturn(user);
         when(ubsUserRepository.findUBSuserByUser(user)).thenReturn(ubsUser);
         when(modelMapper.map(user, PersonalDataDto.class)).thenReturn(expected);
@@ -1469,7 +1465,7 @@ class UBSClientServiceImplTest {
             .setUuid(uuid)
             .setRecipientEmail("mail@mail.ua")
             .setRecipientPhone("067894522");
-        List<UBSuser> ubsUser = Arrays.asList(getUBSuser());
+        List<UBSuser> ubsUser = Collections.singletonList(getUBSuser());
         when(userRepository.findByUuid(uuid)).thenReturn(user);
         when(ubsUserRepository.findUBSuserByUser(user)).thenReturn(ubsUser);
         when(modelMapper.map(user, PersonalDataDto.class)).thenReturn(expected);
@@ -1489,7 +1485,7 @@ class UBSClientServiceImplTest {
             .setRecipientEmail("mail@mail.ua")
             .setRecipientPhone("067894522")
             .setAlternateEmail("");
-        List<UBSuser> ubsUser = Arrays.asList(getUBSuser());
+        List<UBSuser> ubsUser = Collections.singletonList(getUBSuser());
         when(userRepository.findByUuid(uuid)).thenReturn(user);
         when(ubsUserRepository.findUBSuserByUser(user)).thenReturn(ubsUser);
         when(modelMapper.map(user, PersonalDataDto.class)).thenReturn(expected);
@@ -1509,7 +1505,6 @@ class UBSClientServiceImplTest {
             .setRecipientEmail("mail@mail.ua")
             .setRecipientPhone("067894522")
             .setAlternateEmail("my@email.com");
-        List<UBSuser> ubsUser = Arrays.asList(getUBSuser());
         when(userRepository.findByUuid(uuid)).thenReturn(user);
         when(ubsUserRepository.findUBSuserByUser(user)).thenReturn(Collections.emptyList());
         when(modelMapper.map(user, PersonalDataDto.class)).thenReturn(expected);
@@ -1982,8 +1977,8 @@ class UBSClientServiceImplTest {
     void testSaveCurrentAddressForOrder() {
         User user = getUserForCreate();
         List<Address> addresses = user.getAddresses();
-        addresses.get(0).setActual(false);
-        addresses.get(0).setAddressStatus(AddressStatus.NEW);
+        addresses.getFirst().setActual(false);
+        addresses.getFirst().setAddressStatus(AddressStatus.NEW);
 
         String uuid = user.getUuid();
         OrderAddressDtoRequest dtoRequest = getTestOrderAddressLocationDto();
@@ -1994,7 +1989,7 @@ class UBSClientServiceImplTest {
         when(userRepository.findByUuid(user.getUuid())).thenReturn(user);
         when(addressRepository.findAllNonDeletedAddressesByUserId(user.getId())).thenReturn(addresses);
         when(googleApiService.getResultFromGeoCode(eq(dtoRequest.getPlaceId()), anyInt()))
-            .thenReturn(getGeocodingResult().get(0));
+            .thenReturn(getGeocodingResult().getFirst());
 
         when(modelMapper.map(any(), eq(CreateAddressRequestDto.class))).thenReturn(createAddressRequestDto);
         when(modelMapper.map(any(), eq(OrderAddressDtoRequest.class))).thenReturn(TEST_ORDER_ADDRESS_DTO_REQUEST);
@@ -2002,16 +1997,16 @@ class UBSClientServiceImplTest {
         var addressDto = addressDto();
         addressDto.setDistrict("Район");
         addressDto.setDistrictEn("District");
-        when(modelMapper.map(addresses.get(0), AddressDto.class)).thenReturn(addressDto);
+        when(modelMapper.map(addresses.getFirst(), AddressDto.class)).thenReturn(addressDto);
 
         OrderWithAddressesResponseDto actualWithSearchAddress =
             ubsService.saveCurrentAddressForOrder(createAddressRequestToSaveDto, uuid);
 
         assertEquals(getAddressDtoResponse(), actualWithSearchAddress);
         assertEquals(createAddressRequestToSaveDto.getDistrict(),
-            actualWithSearchAddress.getAddressList().get(0).getDistrict());
+            actualWithSearchAddress.getAddressList().getFirst().getDistrict());
         assertEquals(createAddressRequestToSaveDto.getDistrictEn(),
-            actualWithSearchAddress.getAddressList().get(0).getDistrictEn());
+            actualWithSearchAddress.getAddressList().getFirst().getDistrictEn());
 
         verify(addressRepository).save(addressToSave);
 
@@ -2022,15 +2017,15 @@ class UBSClientServiceImplTest {
         verify(modelMapper).map(any(), eq(CreateAddressRequestDto.class));
         verify(modelMapper, times(2)).map(any(), eq(OrderAddressDtoRequest.class));
         verify(modelMapper).map(any(), eq(Address.class));
-        verify(modelMapper).map(addresses.get(0), AddressDto.class);
+        verify(modelMapper).map(addresses.getFirst(), AddressDto.class);
     }
 
     @Test
     void testSaveCurrentAddressForOrder_WithoutDistricts() {
         User user = getUserForCreate();
         List<Address> addresses = user.getAddresses();
-        addresses.get(0).setActual(false);
-        addresses.get(0).setAddressStatus(AddressStatus.NEW);
+        addresses.getFirst().setActual(false);
+        addresses.getFirst().setAddressStatus(AddressStatus.NEW);
 
         String uuid = user.getUuid();
         OrderAddressDtoRequest dtoRequest = getTestOrderAddressLocationDto();
@@ -2040,7 +2035,7 @@ class UBSClientServiceImplTest {
         when(userRepository.findByUuid(user.getUuid())).thenReturn(user);
         when(addressRepository.findAllNonDeletedAddressesByUserId(user.getId())).thenReturn(addresses);
         when(googleApiService.getResultFromGeoCode(eq(dtoRequest.getPlaceId()), anyInt()))
-            .thenReturn(getGeocodingResult().get(0));
+            .thenReturn(getGeocodingResult().getFirst());
 
         when(modelMapper.map(any(), eq(CreateAddressRequestDto.class))).thenReturn(createAddressRequestDto);
         when(modelMapper.map(any(), eq(OrderAddressDtoRequest.class))).thenReturn(TEST_ORDER_ADDRESS_DTO_REQUEST);
@@ -2048,15 +2043,15 @@ class UBSClientServiceImplTest {
         var addressDto = addressDto();
         addressDto.setDistrict(null);
         addressDto.setDistrictEn(null);
-        when(modelMapper.map(addresses.get(0), AddressDto.class)).thenReturn(addressDto);
+        when(modelMapper.map(addresses.getFirst(), AddressDto.class)).thenReturn(addressDto);
 
         OrderWithAddressesResponseDto actualWithSearchAddress =
             ubsService.saveCurrentAddressForOrder(createAddressRequestToSaveDto, uuid);
 
         assertEquals(createAddressRequestToSaveDto.getDistrict(),
-            actualWithSearchAddress.getAddressList().get(0).getDistrict());
+            actualWithSearchAddress.getAddressList().getFirst().getDistrict());
         assertEquals(createAddressRequestToSaveDto.getDistrictEn(),
-            actualWithSearchAddress.getAddressList().get(0).getDistrictEn());
+            actualWithSearchAddress.getAddressList().getFirst().getDistrictEn());
 
         verify(addressRepository).save(addressToSave);
 
@@ -2067,15 +2062,15 @@ class UBSClientServiceImplTest {
         verify(modelMapper).map(any(), eq(CreateAddressRequestDto.class));
         verify(modelMapper, times(2)).map(any(), eq(OrderAddressDtoRequest.class));
         verify(modelMapper).map(any(), eq(Address.class));
-        verify(modelMapper).map(addresses.get(0), AddressDto.class);
+        verify(modelMapper).map(addresses.getFirst(), AddressDto.class);
     }
 
     @Test
     void saveCurrentAddressForOrderWithEmptyPlaceIdTest() {
         User user = getUserForCreate();
         List<Address> addresses = user.getAddresses();
-        addresses.get(0).setActual(false);
-        addresses.get(0).setAddressStatus(AddressStatus.NEW);
+        addresses.getFirst().setActual(false);
+        addresses.getFirst().setAddressStatus(AddressStatus.NEW);
 
         String uuid = user.getUuid();
         CreateAddressRequestDto createAddressRequestDto = getAddressRequestWithEmptyPlaceIdDto();
@@ -2087,7 +2082,7 @@ class UBSClientServiceImplTest {
 
         when(modelMapper.map(any(), eq(CreateAddressRequestDto.class))).thenReturn(createAddressRequestDto);
         when(modelMapper.map(any(), eq(Address.class))).thenReturn(addressToSave);
-        when(modelMapper.map(addresses.get(0), AddressDto.class)).thenReturn(addressWithEmptyPlaceIdDto());
+        when(modelMapper.map(addresses.getFirst(), AddressDto.class)).thenReturn(addressWithEmptyPlaceIdDto());
 
         OrderWithAddressesResponseDto actualWithSearchAddress =
             ubsService.saveCurrentAddressForOrder(createAddressRequestToSaveDto, uuid);
@@ -2100,15 +2095,15 @@ class UBSClientServiceImplTest {
 
         verify(modelMapper).map(any(), eq(CreateAddressRequestDto.class));
         verify(modelMapper).map(any(), eq(Address.class));
-        verify(modelMapper).map(addresses.get(0), AddressDto.class);
+        verify(modelMapper).map(addresses.getFirst(), AddressDto.class);
     }
 
     @Test
     void saveCurrentAddressForOrderForAddressesBelongToKyivEnTest() {
         User user = getUserForCreate();
         List<Address> addresses = user.getAddresses();
-        addresses.get(0).setActual(false);
-        addresses.get(0).setAddressStatus(AddressStatus.NEW);
+        addresses.getFirst().setActual(false);
+        addresses.getFirst().setAddressStatus(AddressStatus.NEW);
 
         String uuid = user.getUuid();
         OrderAddressDtoRequest dtoRequest = getTestOrderAddressLocationDto();
@@ -2119,17 +2114,17 @@ class UBSClientServiceImplTest {
         when(userRepository.findByUuid(user.getUuid())).thenReturn(user);
         when(addressRepository.findAllNonDeletedAddressesByUserId(user.getId())).thenReturn(addresses);
         when(googleApiService.getResultFromGeoCode(eq(dtoRequest.getPlaceId()), anyInt()))
-            .thenReturn(getGeocodingResultWithKyivRegion().get(0));
+            .thenReturn(getGeocodingResultWithKyivRegion().getFirst());
 
         when(modelMapper.map(any(), eq(CreateAddressRequestDto.class))).thenReturn(createAddressRequestDto);
         when(modelMapper.map(any(), eq(OrderAddressDtoRequest.class))).thenReturn(TEST_ORDER_ADDRESS_DTO_REQUEST);
         when(modelMapper.map(any(), eq(Address.class))).thenReturn(addressToSave);
-        when(modelMapper.map(addresses.get(0), AddressDto.class)).thenReturn(addressWithKyivRegionDto());
+        when(modelMapper.map(addresses.getFirst(), AddressDto.class)).thenReturn(addressWithKyivRegionDto());
 
         OrderWithAddressesResponseDto actualWithSearchAddress =
             ubsService.saveCurrentAddressForOrder(createAddressRequestToSaveDto, uuid);
 
-        assertEquals(KYIV_REGION_EN, actualWithSearchAddress.getAddressList().get(0).getRegionEn());
+        assertEquals(KYIV_REGION_EN, actualWithSearchAddress.getAddressList().getFirst().getRegionEn());
 
         verify(userRepository, times(2)).findByUuid(user.getUuid());
         verify(addressRepository, times(2)).findAllNonDeletedAddressesByUserId(user.getId());
@@ -2138,7 +2133,7 @@ class UBSClientServiceImplTest {
         verify(modelMapper).map(any(), eq(CreateAddressRequestDto.class));
         verify(modelMapper, times(2)).map(any(), eq(OrderAddressDtoRequest.class));
         verify(modelMapper).map(any(), eq(Address.class));
-        verify(modelMapper).map(addresses.get(0), AddressDto.class);
+        verify(modelMapper).map(addresses.getFirst(), AddressDto.class);
 
         verify(addressRepository).save(addressToSave);
     }
@@ -2147,8 +2142,8 @@ class UBSClientServiceImplTest {
     void saveCurrentAddressForOrderForAddressesBelongToKyivUaTest() {
         User user = getUserForCreate();
         List<Address> addresses = user.getAddresses();
-        addresses.get(0).setActual(false);
-        addresses.get(0).setAddressStatus(AddressStatus.NEW);
+        addresses.getFirst().setActual(false);
+        addresses.getFirst().setAddressStatus(AddressStatus.NEW);
 
         String uuid = user.getUuid();
         OrderAddressDtoRequest dtoRequest = getTestOrderAddressLocationDto();
@@ -2164,12 +2159,12 @@ class UBSClientServiceImplTest {
         when(modelMapper.map(any(), eq(CreateAddressRequestDto.class))).thenReturn(createAddressRequestDto);
         when(modelMapper.map(any(), eq(OrderAddressDtoRequest.class))).thenReturn(TEST_ORDER_ADDRESS_DTO_REQUEST);
         when(modelMapper.map(any(), eq(Address.class))).thenReturn(addressToSave);
-        when(modelMapper.map(addresses.get(0), AddressDto.class)).thenReturn(addressWithKyivRegionDto());
+        when(modelMapper.map(addresses.getFirst(), AddressDto.class)).thenReturn(addressWithKyivRegionDto());
 
         OrderWithAddressesResponseDto actualWithSearchAddress =
             ubsService.saveCurrentAddressForOrder(createAddressRequestToSaveDto, uuid);
 
-        assertEquals(KYIV_REGION_UA, actualWithSearchAddress.getAddressList().get(0).getRegion());
+        assertEquals(KYIV_REGION_UA, actualWithSearchAddress.getAddressList().getFirst().getRegion());
 
         verify(userRepository, times(2)).findByUuid(user.getUuid());
         verify(addressRepository, times(2)).findAllNonDeletedAddressesByUserId(user.getId());
@@ -2178,7 +2173,7 @@ class UBSClientServiceImplTest {
         verify(modelMapper).map(any(), eq(CreateAddressRequestDto.class));
         verify(modelMapper, times(2)).map(any(), eq(OrderAddressDtoRequest.class));
         verify(modelMapper).map(any(), eq(Address.class));
-        verify(modelMapper).map(addresses.get(0), AddressDto.class);
+        verify(modelMapper).map(addresses.getFirst(), AddressDto.class);
 
         verify(addressRepository).save(addressToSave);
     }
@@ -2192,13 +2187,13 @@ class UBSClientServiceImplTest {
 
         CreateAddressRequestDto createAddressRequestDto = getAddressRequestDto();
 
-        addresses.get(0).setAddressStatus(AddressStatus.NEW);
-        addresses.get(0).setActual(false);
+        addresses.getFirst().setAddressStatus(AddressStatus.NEW);
+        addresses.getFirst().setActual(false);
 
         when(userRepository.findByUuid(user.getUuid())).thenReturn(user);
         when(addressRepository.findAllNonDeletedAddressesByUserId(user.getId())).thenReturn(addresses);
         when(googleApiService.getResultFromGeoCode(eq(dtoRequest.getPlaceId()), anyInt()))
-            .thenReturn(getGeocodingResult().get(0));
+            .thenReturn(getGeocodingResult().getFirst());
 
         dtoRequest.setPlaceId(null);
 
@@ -2243,27 +2238,27 @@ class UBSClientServiceImplTest {
         dtoRequest.setId(1L);
         OrderAddressDtoRequest updateAddressRequestDto = getTestOrderAddressDtoRequest();
         updateAddressRequestDto.setId(1L);
-        addresses.get(0).setActual(false);
-        addresses.get(0).setAddressStatus(AddressStatus.IN_ORDER);
-        addresses.get(0).setUser(user);
+        addresses.getFirst().setActual(false);
+        addresses.getFirst().setAddressStatus(AddressStatus.IN_ORDER);
+        addresses.getFirst().setUser(user);
 
         when(userRepository.findByUuid(user.getUuid())).thenReturn(user);
         when(addressRepository.findAllNonDeletedAddressesByUserId(user.getId())).thenReturn(addresses);
         when(googleApiService.getResultFromGeoCode(eq(updateAddressRequestDto.getPlaceId()), anyInt()))
-            .thenReturn(getGeocodingResult().get(0));
+            .thenReturn(getGeocodingResult().getFirst());
         when(modelMapper.map(any(),
             eq(OrderAddressDtoRequest.class)))
             .thenReturn(TEST_ORDER_ADDRESS_DTO_REQUEST);
         when(addressRepository.findById(updateAddressRequestDto.getId()))
-            .thenReturn(Optional.ofNullable(addresses.get(0)));
+            .thenReturn(Optional.ofNullable(addresses.getFirst()));
         when(modelMapper.map(any(),
-            eq(Address.class))).thenReturn(addresses.get(0));
+            eq(Address.class))).thenReturn(addresses.getFirst());
 
-        when(addressRepository.save(addresses.get(0))).thenReturn(addresses.get(0));
+        when(addressRepository.save(addresses.getFirst())).thenReturn(addresses.getFirst());
         var addressDto = addressDto();
         addressDto.setDistrict("Район");
         addressDto.setDistrictEn("District");
-        when(modelMapper.map(addresses.get(0),
+        when(modelMapper.map(addresses.getFirst(),
             AddressDto.class))
             .thenReturn(addressDto);
 
@@ -2274,9 +2269,9 @@ class UBSClientServiceImplTest {
         Assertions.assertNull(dtoRequest.getSearchAddress());
         assertEquals(getAddressDtoResponse(), actualWithSearchAddress);
         assertEquals(updateAddressRequestDto.getDistrict(),
-            actualWithSearchAddress.getAddressList().get(0).getDistrict());
+            actualWithSearchAddress.getAddressList().getFirst().getDistrict());
         assertEquals(updateAddressRequestDto.getDistrictEn(),
-            actualWithSearchAddress.getAddressList().get(0).getDistrictEn());
+            actualWithSearchAddress.getAddressList().getFirst().getDistrictEn());
 
         verify(googleApiService, times(2)).getResultFromGeoCode(eq(updateAddressRequestDto.getPlaceId()),
             anyInt());
@@ -2285,7 +2280,7 @@ class UBSClientServiceImplTest {
         OrderWithAddressesResponseDto actualWithoutSearchAddress =
             ubsService.updateCurrentAddressForOrder(updateAddressRequestDto, uuid);
         assertEquals(getAddressDtoResponse(), actualWithoutSearchAddress);
-        verify(addressRepository, times(2)).save(addresses.get(0));
+        verify(addressRepository, times(2)).save(addresses.getFirst());
     }
 
     @Test
@@ -2297,21 +2292,21 @@ class UBSClientServiceImplTest {
         dtoRequest.setId(1L);
         OrderAddressDtoRequest updateAddressRequestDto = getTestOrderAddressDtoRequest();
         updateAddressRequestDto.setId(1L);
-        addresses.get(0).setActual(false);
-        addresses.get(0).setUser(user);
+        addresses.getFirst().setActual(false);
+        addresses.getFirst().setUser(user);
 
         when(userRepository.findByUuid(user.getUuid())).thenReturn(user);
         when(addressRepository.findById(updateAddressRequestDto.getId()))
-            .thenReturn(Optional.ofNullable(addresses.get(0)));
+            .thenReturn(Optional.ofNullable(addresses.getFirst()));
         when(googleApiService.getResultFromGeoCode(eq(updateAddressRequestDto.getPlaceId()), anyInt()))
-            .thenReturn(getGeocodingResult().get(0));
+            .thenReturn(getGeocodingResult().getFirst());
 
         when(addressRepository.findById(updateAddressRequestDto.getId()))
-            .thenReturn(Optional.ofNullable(addresses.get(0)));
+            .thenReturn(Optional.ofNullable(addresses.getFirst()));
         when(modelMapper.map(any(),
-            eq(Address.class))).thenReturn(addresses.get(0));
+            eq(Address.class))).thenReturn(addresses.getFirst());
 
-        when(addressRepository.save(addresses.get(0))).thenReturn(addresses.get(0));
+        when(addressRepository.save(addresses.getFirst())).thenReturn(addresses.getFirst());
 
         OrderWithAddressesResponseDto actualWithSearchAddress =
             ubsService.updateCurrentAddressForOrder(updateAddressRequestDto, uuid);
@@ -2323,7 +2318,7 @@ class UBSClientServiceImplTest {
 
         verify(googleApiService, times(2)).getResultFromGeoCode(eq(updateAddressRequestDto.getPlaceId()),
             anyInt());
-        verify(addressRepository, times(1)).save(addresses.get(0));
+        verify(addressRepository, times(1)).save(addresses.getFirst());
         verify(addressRepository, times(1)).findById(anyLong());
         verify(modelMapper, times(1)).map(any(), eq(Address.class));
     }
@@ -2338,16 +2333,16 @@ class UBSClientServiceImplTest {
         dtoRequest.setPlaceId(null);
         OrderAddressDtoRequest updateAddressRequestDto = getTestOrderAddressDtoRequest();
         updateAddressRequestDto.setId(1L);
-        addresses.get(0).setActual(false);
-        addresses.get(0).setAddressStatus(AddressStatus.IN_ORDER);
-        addresses.get(0).setUser(user);
+        addresses.getFirst().setActual(false);
+        addresses.getFirst().setAddressStatus(AddressStatus.IN_ORDER);
+        addresses.getFirst().setUser(user);
 
         when(userRepository.findByUuid(user.getUuid())).thenReturn(user);
         when(addressRepository.findById(updateAddressRequestDto.getId()))
-            .thenReturn(Optional.ofNullable(addresses.get(0)));
+            .thenReturn(Optional.ofNullable(addresses.getFirst()));
         when(addressRepository.findAllNonDeletedAddressesByUserId(user.getId())).thenReturn(addresses);
         when(googleApiService.getResultFromGeoCode(eq(updateAddressRequestDto.getPlaceId()), anyInt()))
-            .thenReturn(getGeocodingResult().get(0));
+            .thenReturn(getGeocodingResult().getFirst());
         when(modelMapper.map(any(),
             eq(OrderAddressDtoRequest.class)))
             .thenReturn(dtoRequest);
@@ -2367,9 +2362,9 @@ class UBSClientServiceImplTest {
         dtoRequest.setId(1L);
         OrderAddressDtoRequest updateAddressRequestDto = getTestOrderAddressDtoRequest();
         updateAddressRequestDto.setId(1L);
-        addresses.get(0).setActual(false);
-        addresses.get(0).setAddressStatus(AddressStatus.IN_ORDER);
-        addresses.get(0).setUser(user);
+        addresses.getFirst().setActual(false);
+        addresses.getFirst().setAddressStatus(AddressStatus.IN_ORDER);
+        addresses.getFirst().setUser(user);
 
         when(userRepository.findByUuid(user.getUuid())).thenReturn(user);
         when(addressRepository.findById(updateAddressRequestDto.getId())).thenReturn(Optional.empty());
@@ -2870,9 +2865,7 @@ class UBSClientServiceImplTest {
         when(ordersForUserRepository.getAllByUserUuidAndId(order.getUser().getUuid(), order.getId()))
             .thenReturn(null);
 
-        assertThrows(NotFoundException.class, () -> {
-            ubsService.deleteOrder("UUID", 1L);
-        });
+        assertThrows(NotFoundException.class, () -> ubsService.deleteOrder("UUID", 1L));
     }
 
     @Test
@@ -2897,7 +2890,7 @@ class UBSClientServiceImplTest {
 
         order.setCertificates(Set.of(getCertificate()));
         order.setPayment(TEST_PAYMENT_LIST);
-        order.updateWithNewOrderBags(Arrays.asList(ModelUtils.getOrderBag()));
+        order.updateWithNewOrderBags(Collections.singletonList(ModelUtils.getOrderBag()));
         Field[] fields = UBSClientServiceImpl.class.getDeclaredFields();
         for (Field f : fields) {
             if (f.getName().equals("merchantId")) {
@@ -2908,7 +2901,7 @@ class UBSClientServiceImplTest {
 
         order.setPointsToUse(-10000);
         CertificateDto certificateDto = createCertificateDto();
-        order.updateWithNewOrderBags(Arrays.asList(ModelUtils.getOrderBag()));
+        order.updateWithNewOrderBags(Collections.singletonList(ModelUtils.getOrderBag()));
 
         when(orderRepository.findById(1L)).thenReturn(Optional.of(order));
         when(userRepository.findUserByUuid("uuid")).thenReturn(Optional.of(user));
@@ -2917,7 +2910,7 @@ class UBSClientServiceImplTest {
         when(modelMapper.map(any(OrderBag.class), eq(BagForUserDto.class))).thenReturn(TEST_BAG_FOR_USER_DTO);
         when(certificateRepository.findAllByCodeAndCertificateStatus(new ArrayList<>(dto.getCertificates()),
             CertificateStatus.ACTIVE)).thenReturn(Set.of(certificate));
-        when(orderBagService.getActualBagsAmountForOrder(Arrays.asList(ModelUtils.getOrderBag())))
+        when(orderBagService.getActualBagsAmountForOrder(Collections.singletonList(ModelUtils.getOrderBag())))
             .thenReturn(ModelUtils.getAmount());
 
         ubsService.processOrderFondyClient(dto, "uuid");
@@ -2957,8 +2950,8 @@ class UBSClientServiceImplTest {
 
         CertificateDto certificateDto = createCertificateDto();
         certificateDto.setPoints(1500);
-        order.updateWithNewOrderBags(Arrays.asList(ModelUtils.getOrderBag()));
-        when(orderBagService.getActualBagsAmountForOrder(Arrays.asList(ModelUtils.getOrderBag())))
+        order.updateWithNewOrderBags(Collections.singletonList(ModelUtils.getOrderBag()));
+        when(orderBagService.getActualBagsAmountForOrder(Collections.singletonList(ModelUtils.getOrderBag())))
             .thenReturn(ModelUtils.getAmount());
         when(orderRepository.findById(1L)).thenReturn(Optional.of(order));
         when(userRepository.findUserByUuid("uuid")).thenReturn(Optional.of(user));
@@ -3006,14 +2999,14 @@ class UBSClientServiceImplTest {
         CertificateDto certificateDto = createCertificateDto();
         certificateDto.setPoints(1500);
         order.setPointsToUse(-1000);
-        order.updateWithNewOrderBags(Arrays.asList(ModelUtils.getOrderBag()));
+        order.updateWithNewOrderBags(Collections.singletonList(ModelUtils.getOrderBag()));
         when(orderRepository.findById(1L)).thenReturn(Optional.of(order));
         when(userRepository.findUserByUuid("uuid")).thenReturn(Optional.of(user));
         when(certificateRepository.findAllByCodeAndCertificateStatus(new ArrayList<>(dto.getCertificates()),
             CertificateStatus.ACTIVE)).thenReturn(Set.of(certificate));
         when(modelMapper.map(certificate, CertificateDto.class)).thenReturn(certificateDto);
         when(modelMapper.map(any(OrderBag.class), eq(BagForUserDto.class))).thenReturn(TEST_BAG_FOR_USER_DTO);
-        when(orderBagService.getActualBagsAmountForOrder(Arrays.asList(ModelUtils.getOrderBag())))
+        when(orderBagService.getActualBagsAmountForOrder(Collections.singletonList(ModelUtils.getOrderBag())))
             .thenReturn(ModelUtils.getAmount());
 
         assertThrows(NotFoundException.class, () -> ubsService.processOrderFondyClient(dto, "uuid"));
@@ -3036,13 +3029,13 @@ class UBSClientServiceImplTest {
         order.setSumTotalAmountWithoutDiscounts(1000_00L);
         order.setCertificates(Set.of(getCertificate()));
         order.setPayment(TEST_PAYMENT_LIST);
-        order.getPayment().get(0).setAmount(1000_00L);
+        order.getPayment().getFirst().setAmount(1000_00L);
         User user = getUser();
         user.setCurrentPoints(100);
         user.setChangeOfPointsList(new ArrayList<>());
         order.setUser(user);
         order.setPointsToUse(-10000);
-        order.updateWithNewOrderBags(Arrays.asList(ModelUtils.getOrderBag()));
+        order.updateWithNewOrderBags(Collections.singletonList(ModelUtils.getOrderBag()));
         OrderFondyClientDto dto = getOrderFondyClientDto();
         Field[] fields = UBSClientServiceImpl.class.getDeclaredFields();
         for (Field f : fields) {
@@ -3060,14 +3053,13 @@ class UBSClientServiceImplTest {
         when(fondyClient.getCheckoutResponse(any())).thenReturn(getSuccessfulFondyResponse());
         when(modelMapper.map(certificate, CertificateDto.class)).thenReturn(certificateDto);
         when(modelMapper.map(any(OrderBag.class), eq(BagForUserDto.class))).thenReturn(TEST_BAG_FOR_USER_DTO);
-        when(orderBagService.getActualBagsAmountForOrder(Arrays.asList(ModelUtils.getOrderBag())))
+        when(orderBagService.getActualBagsAmountForOrder(Collections.singletonList(ModelUtils.getOrderBag())))
             .thenReturn(ModelUtils.getAmount());
 
         ubsService.processOrderFondyClient(dto, "uuid");
 
         verify(encryptionUtil).formRequestSignature(any(), eq(null), eq("1"));
         verify(fondyClient).getCheckoutResponse(any());
-
     }
 
     @Test
@@ -3084,7 +3076,7 @@ class UBSClientServiceImplTest {
         user.setCurrentPoints(900);
 
         OrderResponseDto dto = getOrderResponseDto();
-        dto.getBags().get(0).setAmount(15);
+        dto.getBags().getFirst().setAmount(15);
         dto.setCertificates(Set.of(getCertificate().getCode()));
         Order order = getOrder();
         user.setOrders(new ArrayList<>());
@@ -3106,8 +3098,8 @@ class UBSClientServiceImplTest {
         Payment payment1 = getPayment();
         payment1.setId(1L);
         order1.getPayment().add(payment1);
-        order.updateWithNewOrderBags(Arrays.asList(ModelUtils.getOrderBag()));
-        order1.updateWithNewOrderBags(Arrays.asList(ModelUtils.getOrderBag()));
+        order.updateWithNewOrderBags(Collections.singletonList(ModelUtils.getOrderBag()));
+        order1.updateWithNewOrderBags(Collections.singletonList(ModelUtils.getOrderBag()));
 
         Field[] fields = UBSClientServiceImpl.class.getDeclaredFields();
         for (Field f : fields) {
@@ -3118,7 +3110,7 @@ class UBSClientServiceImplTest {
         }
 
         bag.setTariffsInfo(tariffsInfo);
-        tariffsInfo.setBags(Arrays.asList(bag));
+        tariffsInfo.setBags(List.of(bag));
         order.setTariffsInfo(tariffsInfo);
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(tariffsInfo));
@@ -3145,7 +3137,7 @@ class UBSClientServiceImplTest {
         OrderResponseDto dto = getOrderResponseDto();
         dto.setAddressId(1L);
         dto.setPointsToUse(6000);
-        dto.getBags().get(0).setAmount(15);
+        dto.getBags().getFirst().setAmount(15);
         Order order = getOrder();
         order.setPayment(null);
         user.setOrders(new ArrayList<>());
@@ -3176,7 +3168,7 @@ class UBSClientServiceImplTest {
         }
         TariffsInfo tariffsInfo = getTariffsInfo();
         bag.setTariffsInfo(tariffsInfo);
-        tariffsInfo.setBags(Arrays.asList(bag));
+        tariffsInfo.setBags(List.of(bag));
         order.setTariffsInfo(tariffsInfo);
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(tariffsInfo));
@@ -3200,7 +3192,7 @@ class UBSClientServiceImplTest {
         user.setCurrentPoints(900);
 
         OrderResponseDto dto = getOrderResponseDto();
-        dto.getBags().get(0).setAmount(3);
+        dto.getBags().getFirst().setAmount(3);
         Order order = getOrder();
         user.setOrders(new ArrayList<>());
         user.getOrders().add(order);
@@ -3231,9 +3223,8 @@ class UBSClientServiceImplTest {
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(getTariffInfoWithLimitOfBags()));
         when(bagRepository.findActiveBagById(3)).thenReturn(Optional.of(bag));
-        assertThrows(BadRequestException.class, () -> {
-            ubsService.saveFullOrderToDB(dto, "35467585763t4sfgchjfuyetf", null);
-        });
+        assertThrows(BadRequestException.class,
+            () -> ubsService.saveFullOrderToDB(dto, "35467585763t4sfgchjfuyetf", null));
     }
 
     @Test
@@ -3242,7 +3233,7 @@ class UBSClientServiceImplTest {
         user.setCurrentPoints(9000);
 
         OrderResponseDto dto = getOrderResponseDto();
-        dto.getBags().get(0).setAmount(15);
+        dto.getBags().getFirst().setAmount(15);
 
         Order order = getOrder();
         user.setOrders(new ArrayList<>());
@@ -3274,19 +3265,18 @@ class UBSClientServiceImplTest {
 
         when(bagRepository.findActiveBagById(3)).thenReturn(Optional.of(bag));
 
-        assertThrows(BadRequestException.class, () -> {
-            ubsService.saveFullOrderToDB(dto, "35467585763t4sfgchjfuyetf", null);
-        });
+        assertThrows(BadRequestException.class,
+            () -> ubsService.saveFullOrderToDB(dto, "35467585763t4sfgchjfuyetf", null));
 
     }
 
     @Test
-    void testCheckSumIfCourierLimitBySumOfOrderForIF2() throws InvocationTargetException, IllegalAccessException {
+    void testCheckSumIfCourierLimitBySumOfOrderForIF2() throws IllegalAccessException {
         User user = getUserWithLastLocation();
         user.setCurrentPoints(9000);
 
         OrderResponseDto dto = getOrderResponseDto();
-        dto.getBags().get(0).setAmount(15);
+        dto.getBags().getFirst().setAmount(15);
 
         Order order = getOrder();
         user.setOrders(new ArrayList<>());
@@ -3317,9 +3307,8 @@ class UBSClientServiceImplTest {
             .thenReturn(Optional.of(tariffsInfo));
         when(bagRepository.findActiveBagById(3)).thenReturn(Optional.of(bag));
 
-        assertThrows(BadRequestException.class, () -> {
-            ubsService.saveFullOrderToDB(dto, "35467585763t4sfgchjfuyetf", null);
-        });
+        assertThrows(BadRequestException.class,
+            () -> ubsService.saveFullOrderToDB(dto, "35467585763t4sfgchjfuyetf", null));
     }
 
     @Test
@@ -3360,7 +3349,7 @@ class UBSClientServiceImplTest {
     void findAllCurrentPointsForUser() {
         User user = getTestUser();
         user.setCurrentPoints(100);
-        user.getChangeOfPointsList().get(0).setAmount(100);
+        user.getChangeOfPointsList().getFirst().setAmount(100);
 
         when(userRepository.findUserByUuid(user.getUuid())).thenReturn(Optional.of(user));
 
@@ -3380,7 +3369,7 @@ class UBSClientServiceImplTest {
     void getPaymentResponseFromFondy() {
         Order order = getOrder();
         FondyPaymentResponse expected = FondyPaymentResponse.builder()
-            .paymentStatus(order.getPayment().get(0).getResponseStatus())
+            .paymentStatus(order.getPayment().getFirst().getResponseStatus())
             .build();
 
         when(orderRepository.findById(1L)).thenReturn(Optional.of(order));
@@ -3392,9 +3381,7 @@ class UBSClientServiceImplTest {
     @Test
     void getPaymentResponseFromFondyOrderNotFoundException() {
         when(orderRepository.findById(1L)).thenReturn(Optional.empty());
-        assertThrows(NotFoundException.class, () -> {
-            ubsService.getPaymentResponseFromFondy(1L, "abc");
-        });
+        assertThrows(NotFoundException.class, () -> ubsService.getPaymentResponseFromFondy(1L, "abc"));
     }
 
     @Test
@@ -3405,9 +3392,7 @@ class UBSClientServiceImplTest {
         when(orderRepository.findById(1L)).thenReturn(Optional.of(order));
         when(userRepository.findByUuid(uuid)).thenReturn(order.getUser());
 
-        assertThrows(NotFoundException.class, () -> {
-            ubsService.getPaymentResponseFromFondy(1L, uuid);
-        });
+        assertThrows(NotFoundException.class, () -> ubsService.getPaymentResponseFromFondy(1L, uuid));
     }
 
     @Test
@@ -3417,16 +3402,13 @@ class UBSClientServiceImplTest {
         when(orderRepository.findById(1L)).thenReturn(Optional.of(order));
         when(userRepository.findByUuid(anyString())).thenReturn(getTestUser());
 
-        assertThrows(AccessDeniedException.class, () -> {
-            ubsService.getPaymentResponseFromFondy(1L, "abc");
-        });
+        assertThrows(AccessDeniedException.class, () -> ubsService.getPaymentResponseFromFondy(1L, "abc"));
     }
 
     @Test
     void getOrderForUserTest() {
         OrderStatusTranslation orderStatusTranslation = getOrderStatusTranslation();
         OrderPaymentStatusTranslation orderPaymentStatusTranslation = getOrderPaymentStatusTranslation();
-        OrdersDataForUserDto ordersDataForUserDto = getOrderStatusDto();
         Order order = getOrderTest();
         User user = getTestUser();
         Bag bag = bagDto();
@@ -3434,19 +3416,18 @@ class UBSClientServiceImplTest {
         List<Bag> bags = new ArrayList<>();
         List<Order> orderList = new ArrayList<>();
 
-        BagForUserDto bagForUserDto = ordersDataForUserDto.getBags().get(0);
         bag.setCapacity(120);
         bag.setFullPrice(1200_00L);
         order.setAmountOfBagsOrdered(Map.of(1, 10));
         bags.add(bag);
         order.setUser(user);
-        order.updateWithNewOrderBags(Arrays.asList(ModelUtils.getOrderBag()));
+        order.updateWithNewOrderBags(Collections.singletonList(ModelUtils.getOrderBag()));
         order.setOrderPaymentStatus(OrderPaymentStatus.PAID);
         orderList.add(order);
         when(modelMapper.map(any(OrderBag.class), eq(BagForUserDto.class))).thenReturn(TEST_BAG_FOR_USER_DTO);
         when(ordersForUserRepository.getAllByUserUuidAndId(user.getUuid(), order.getId()))
             .thenReturn(order);
-        when(orderBagService.getActualBagsAmountForOrder(Arrays.asList(ModelUtils.getOrderBag())))
+        when(orderBagService.getActualBagsAmountForOrder(Collections.singletonList(ModelUtils.getOrderBag())))
             .thenReturn(ModelUtils.getAmount());
         when(orderStatusTranslationRepository
             .getOrderStatusTranslationById((long) order.getOrderStatus().getNumValue()))
@@ -3468,21 +3449,17 @@ class UBSClientServiceImplTest {
     @Test
     void getOrderForUserFail() {
         Order order = getOrderTest();
-        User user = getTestUser();
 
         when(ordersForUserRepository.getAllByUserUuidAndId("UUID", order.getId()))
             .thenReturn(null);
 
-        assertThrows(NotFoundException.class, () -> {
-            ubsService.getOrderForUser("UUID", 1L);
-        });
+        assertThrows(NotFoundException.class, () -> ubsService.getOrderForUser("UUID", 1L));
     }
 
     @Test
     void getOrdersForUserTest() {
         OrderStatusTranslation orderStatusTranslation = getOrderStatusTranslation();
         OrderPaymentStatusTranslation orderPaymentStatusTranslation = getOrderPaymentStatusTranslation();
-        OrdersDataForUserDto ordersDataForUserDto = getOrderStatusDto();
         Order order = getOrderTest();
         User user = getTestUser();
         Bag bag = bagDto();
@@ -3490,7 +3467,6 @@ class UBSClientServiceImplTest {
         List<Bag> bags = new ArrayList<>();
         List<Order> orderList = new ArrayList<>();
 
-        BagForUserDto bagForUserDto = ordersDataForUserDto.getBags().get(0);
         bag.setCapacity(120);
         bag.setFullPrice(1200_00L);
         order.setAmountOfBagsOrdered(Map.of(1, 10));
@@ -3500,7 +3476,7 @@ class UBSClientServiceImplTest {
         orderList.add(order);
         Pageable pageable = PageRequest.of(0, 10, Sort.by("order_date").descending());
         Page<Order> page = new PageImpl<>(orderList, pageable, 1);
-        order.updateWithNewOrderBags(Arrays.asList(ModelUtils.getOrderBag()));
+        order.updateWithNewOrderBags(Collections.singletonList(ModelUtils.getOrderBag()));
 
         when(ordersForUserRepository.getAllByUserUuid(pageable, user.getUuid()))
             .thenReturn(page);
@@ -3511,13 +3487,13 @@ class UBSClientServiceImplTest {
         when(orderPaymentStatusTranslationRepository.getById(
             (long) order.getOrderPaymentStatus().getStatusValue()))
             .thenReturn(orderPaymentStatusTranslation);
-        when(orderBagService.getActualBagsAmountForOrder(Arrays.asList(ModelUtils.getOrderBag())))
+        when(orderBagService.getActualBagsAmountForOrder(Collections.singletonList(ModelUtils.getOrderBag())))
             .thenReturn(ModelUtils.getAmount());
 
         PageableDto<OrdersDataForUserDto> dto = ubsService.getOrdersForUser(user.getUuid(), pageable, null);
 
         assertEquals(dto.getTotalElements(), orderList.size());
-        assertEquals(dto.getPage().get(0).getId(), order.getId());
+        assertEquals(dto.getPage().getFirst().getId(), order.getId());
 
         verify(modelMapper).map(any(OrderBag.class), eq(BagForUserDto.class));
         verify(orderStatusTranslationRepository, times(orderList.size()))
@@ -3533,14 +3509,14 @@ class UBSClientServiceImplTest {
         OrderPaymentStatusTranslation orderPaymentStatusTranslation = getOrderPaymentStatusTranslation();
         OrdersDataForUserDto ordersDataForUserDto = getOrderStatusDto();
         Order order = getOrderTest();
-        order.updateWithNewOrderBags(Arrays.asList(ModelUtils.getOrderBag()));
+        order.updateWithNewOrderBags(Collections.singletonList(ModelUtils.getOrderBag()));
         User user = getTestUser();
         Bag bag = bagDto();
 
         List<Bag> bags = new ArrayList<>();
         List<Order> orderList = new ArrayList<>();
 
-        BagForUserDto bagForUserDto = ordersDataForUserDto.getBags().get(0);
+        BagForUserDto bagForUserDto = ordersDataForUserDto.getBags().getFirst();
         bag.setCapacity(120);
         bag.setFullPrice(1200_00L);
         order.setExportedQuantity(Map.of(1, 10));
@@ -3559,13 +3535,13 @@ class UBSClientServiceImplTest {
         when(orderPaymentStatusTranslationRepository.getById(
             (long) order.getOrderPaymentStatus().getStatusValue()))
             .thenReturn(orderPaymentStatusTranslation);
-        when(orderBagService.getActualBagsAmountForOrder(Arrays.asList(ModelUtils.getOrderBag())))
+        when(orderBagService.getActualBagsAmountForOrder(Collections.singletonList(ModelUtils.getOrderBag())))
             .thenReturn(ModelUtils.getAmount());
         when(modelMapper.map(any(OrderBag.class), eq(BagForUserDto.class))).thenReturn(TEST_BAG_FOR_USER_DTO);
         PageableDto<OrdersDataForUserDto> dto = ubsService.getOrdersForUser(user.getUuid(), pageable, null);
 
         assertEquals(dto.getTotalElements(), orderList.size());
-        assertEquals(dto.getPage().get(0).getId(), order.getId());
+        assertEquals(dto.getPage().getFirst().getId(), order.getId());
 
         verify(modelMapper).map(any(OrderBag.class), eq(BagForUserDto.class));
         verify(orderStatusTranslationRepository, times(orderList.size()))
@@ -3588,13 +3564,13 @@ class UBSClientServiceImplTest {
         List<Bag> bags = new ArrayList<>();
         List<Order> orderList = new ArrayList<>();
 
-        BagForUserDto bagForUserDto = ordersDataForUserDto.getBags().get(0);
+        BagForUserDto bagForUserDto = ordersDataForUserDto.getBags().getFirst();
         bag.setCapacity(120);
         bag.setFullPrice(1200_00L);
         order.setConfirmedQuantity(Map.of(1, 10));
         bags.add(bag);
         order.setUser(user);
-        order.updateWithNewOrderBags(Arrays.asList(ModelUtils.getOrderBag()));
+        order.updateWithNewOrderBags(Collections.singletonList(ModelUtils.getOrderBag()));
         order.setOrderPaymentStatus(OrderPaymentStatus.PAID);
         orderList.add(order);
         Pageable pageable = PageRequest.of(0, 10, Sort.by("order_date").descending());
@@ -3609,12 +3585,12 @@ class UBSClientServiceImplTest {
         when(orderPaymentStatusTranslationRepository.getById(
             (long) order.getOrderPaymentStatus().getStatusValue()))
             .thenReturn(orderPaymentStatusTranslation);
-        when(orderBagService.getActualBagsAmountForOrder(Arrays.asList(ModelUtils.getOrderBag())))
+        when(orderBagService.getActualBagsAmountForOrder(Collections.singletonList(ModelUtils.getOrderBag())))
             .thenReturn(ModelUtils.getAmount());
         PageableDto<OrdersDataForUserDto> dto = ubsService.getOrdersForUser(user.getUuid(), pageable, null);
 
         assertEquals(dto.getTotalElements(), orderList.size());
-        assertEquals(dto.getPage().get(0).getId(), order.getId());
+        assertEquals(dto.getPage().getFirst().getId(), order.getId());
 
         verify(modelMapper).map(any(OrderBag.class), eq(BagForUserDto.class));
         verify(orderStatusTranslationRepository, times(orderList.size()))
@@ -3636,13 +3612,13 @@ class UBSClientServiceImplTest {
         order.setAmountOfBagsOrdered(Map.of(1, 10));
         order.setUser(user);
         order.setOrderPaymentStatus(OrderPaymentStatus.PAID);
-        order.updateWithNewOrderBags(Arrays.asList(ModelUtils.getOrderBag()));
+        order.updateWithNewOrderBags(Collections.singletonList(ModelUtils.getOrderBag()));
         orderList.add(order);
         Pageable pageable = PageRequest.of(0, 10, Sort.by("order_date").descending());
         Page<Order> page = new PageImpl<>(orderList, pageable, 1);
 
         TariffsInfo tariffsInfo = getTariffsInfo();
-        tariffsInfo.setBags(Arrays.asList(getBag()));
+        tariffsInfo.setBags(Collections.singletonList(getBag()));
         order.setTariffsInfo(tariffsInfo);
         when(ordersForUserRepository.getAllByUserUuid(pageable, user.getUuid()))
             .thenReturn(page);
@@ -3653,11 +3629,11 @@ class UBSClientServiceImplTest {
             (long) order.getOrderPaymentStatus().getStatusValue()))
             .thenReturn(orderPaymentStatusTranslation);
         when(modelMapper.map(any(OrderBag.class), eq(BagForUserDto.class))).thenReturn(TEST_BAG_FOR_USER_DTO);
-        when(orderBagService.getActualBagsAmountForOrder(Arrays.asList(ModelUtils.getOrderBag())))
+        when(orderBagService.getActualBagsAmountForOrder(Collections.singletonList(ModelUtils.getOrderBag())))
             .thenReturn(ModelUtils.getAmount());
         PageableDto<OrdersDataForUserDto> dto = ubsService.getOrdersForUser(user.getUuid(), pageable, null);
         assertEquals(dto.getTotalElements(), orderList.size());
-        assertEquals(dto.getPage().get(0).getId(), order.getId());
+        assertEquals(dto.getPage().getFirst().getId(), order.getId());
     }
 
     @Test
@@ -3667,7 +3643,7 @@ class UBSClientServiceImplTest {
         when(tariffsInfoRepository.findTariffsInfoLimitsByCourierIdAndLocationId(anyLong(), anyLong()))
             .thenReturn(Optional.of(tariff));
         OrderCourierPopUpDto dto = ubsService.getTariffInfoForLocation(1L, 1L);
-        assertTrue(dto.getOrderIsPresent());
+        Assertions.assertTrue(dto.getOrderIsPresent());
         verify(courierRepository).existsCourierById(1L);
         verify(modelMapper).map(tariff, TariffsForLocationDto.class);
         verify(tariffsInfoRepository).findTariffsInfoLimitsByCourierIdAndLocationId(anyLong(), anyLong());
@@ -3703,7 +3679,7 @@ class UBSClientServiceImplTest {
 
         OrderCourierPopUpDto dto = ubsService.getInfoForCourierOrderingByCourierId("35467585763t4sfgchjfuyetf",
             Optional.empty(), 1L);
-        assertTrue(dto.getOrderIsPresent());
+        Assertions.assertTrue(dto.getOrderIsPresent());
 
         verify(courierRepository).existsCourierById(1L);
         verify(modelMapper).map(tariff, TariffsForLocationDto.class);
@@ -3762,12 +3738,12 @@ class UBSClientServiceImplTest {
         user.setCurrentPoints(900);
 
         OrderResponseDto dto = getOrderResponseDto();
-        dto.getBags().get(0).setAmount(15);
+        dto.getBags().getFirst().setAmount(15);
         Order order = getOrder();
         user.setOrders(new ArrayList<>());
         user.getOrders().add(order);
         user.setChangeOfPointsList(new ArrayList<>());
-        order.updateWithNewOrderBags(Arrays.asList(ModelUtils.getOrderBag()));
+        order.updateWithNewOrderBags(Collections.singletonList(ModelUtils.getOrderBag()));
         Bag bag = getBagForOrder();
 
         UBSuser ubSuser = getUBSuser();
@@ -3784,7 +3760,7 @@ class UBSClientServiceImplTest {
         }
         TariffsInfo tariffsInfo = getTariffsInfo();
         bag.setTariffsInfo(tariffsInfo);
-        tariffsInfo.setBags(Arrays.asList(bag));
+        tariffsInfo.setBags(List.of(bag));
         order.setTariffsInfo(tariffsInfo);
         when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user);
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
@@ -3810,7 +3786,7 @@ class UBSClientServiceImplTest {
         User user1 = getUser();
 
         OrderResponseDto dto = getOrderResponseDto();
-        dto.getBags().get(0).setAmount(15);
+        dto.getBags().getFirst().setAmount(15);
         Order order = getOrder();
         user.setOrders(new ArrayList<>());
         user.getOrders().add(order);
@@ -3832,7 +3808,7 @@ class UBSClientServiceImplTest {
         }
         TariffsInfo tariffsInfo = getTariffsInfo();
         bag.setTariffsInfo(tariffsInfo);
-        tariffsInfo.setBags(Arrays.asList(bag));
+        tariffsInfo.setBags(List.of(bag));
         order.setTariffsInfo(tariffsInfo);
         when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user);
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
@@ -3855,7 +3831,7 @@ class UBSClientServiceImplTest {
         user.setCurrentPoints(100);
 
         OrderResponseDto dto = getOrderResponseDto();
-        dto.getBags().get(0).setAmount(15);
+        dto.getBags().getFirst().setAmount(15);
         Order order = getOrder();
         user.setOrders(new ArrayList<>());
         user.getOrders().add(order);
@@ -3872,7 +3848,7 @@ class UBSClientServiceImplTest {
         }
         TariffsInfo tariffsInfo = getTariffsInfo();
         bag.setTariffsInfo(tariffsInfo);
-        tariffsInfo.setBags(Arrays.asList(bag));
+        tariffsInfo.setBags(List.of(bag));
         order.setTariffsInfo(tariffsInfo);
 
         when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user);
@@ -3946,14 +3922,14 @@ class UBSClientServiceImplTest {
         bag.setFullPrice(1200_00L);
         bags.add(bag);
         order.setUser(user);
-        order.updateWithNewOrderBags(Arrays.asList(ModelUtils.getOrderBag()));
+        order.updateWithNewOrderBags(Collections.singletonList(ModelUtils.getOrderBag()));
         order.setOrderPaymentStatus(OrderPaymentStatus.PAID);
         orderList.add(order);
         Pageable pageable = PageRequest.of(0, 10, Sort.by("order_date").descending());
         Page<Order> page = new PageImpl<>(orderList, pageable, 1);
         TariffsInfo tariffsInfo = getTariffsInfo();
         bag.setTariffsInfo(tariffsInfo);
-        tariffsInfo.setBags(Arrays.asList(bag));
+        tariffsInfo.setBags(List.of(bag));
         order.setTariffsInfo(tariffsInfo);
         when(ordersForUserRepository.getAllByUserUuid(pageable, user.getUuid()))
             .thenReturn(page);
@@ -3964,13 +3940,13 @@ class UBSClientServiceImplTest {
             (long) order.getOrderPaymentStatus().getStatusValue()))
             .thenReturn(orderPaymentStatusTranslation);
         when(modelMapper.map(any(OrderBag.class), eq(BagForUserDto.class))).thenReturn(TEST_BAG_FOR_USER_DTO);
-        when(orderBagService.getActualBagsAmountForOrder(Arrays.asList(ModelUtils.getOrderBag())))
+        when(orderBagService.getActualBagsAmountForOrder(Collections.singletonList(ModelUtils.getOrderBag())))
             .thenReturn(ModelUtils.getAmount());
 
         PageableDto<OrdersDataForUserDto> dto = ubsService.getOrdersForUser(user.getUuid(), pageable, null);
 
         assertEquals(dto.getTotalElements(), orderList.size());
-        assertEquals(dto.getPage().get(0).getId(), order.getId());
+        assertEquals(dto.getPage().getFirst().getId(), order.getId());
         verify(orderStatusTranslationRepository, times(orderList.size()))
             .getOrderStatusTranslationById((long) order.getOrderStatus().getNumValue());
         verify(orderPaymentStatusTranslationRepository, times(orderList.size()))
