@@ -114,7 +114,7 @@ class ViberServiceImplTest {
         SendMessageToUserDto sendMessageToUserDto = SendMessageToUserDto.builder()
             .receiver(notification.getUser().getViberBot().getChatId())
             .type(MessageType.text)
-            .text(template.getTitle() + "\n\n" + template.getNotificationPlatforms().get(0).getBody())
+            .text(template.getTitle() + "\n\n" + template.getNotificationPlatforms().getFirst().getBody())
             .build();
 
         when(userRemoteClient.findNotDeactivatedByEmail(notification.getUser().getRecipientEmail()))
@@ -192,15 +192,17 @@ class ViberServiceImplTest {
         when(viberClient.getAccountInfo()).thenReturn(noWebhookResponse);
         viberService.init();
 
-        ResponseEntity<String> wrongWebhookResponse = ResponseEntity.ok().body("{\n" +
-            "\"webhook\":\"https://wrong.webhook.com\"\n" +
-            "}");
+        ResponseEntity<String> wrongWebhookResponse = ResponseEntity.ok().body("""
+            {
+            "webhook":"https://wrong.webhook.com"
+            }""");
         when(viberClient.getAccountInfo()).thenReturn(wrongWebhookResponse);
         viberService.init();
 
-        ResponseEntity<String> rightWebhookResponse = ResponseEntity.ok().body("{\n" +
-            "\"webhook\":\"https://right.webhook.com\"\n" +
-            "}");
+        ResponseEntity<String> rightWebhookResponse = ResponseEntity.ok().body("""
+            {
+            "webhook":"https://right.webhook.com"
+            }""");
         when(viberClient.getAccountInfo()).thenReturn(rightWebhookResponse);
         viberService.init();
 
